# roomeq

./: .gitignore  API_DOCUMENTATION.md  LICENSE  README.md  acoustic_test.py  analyze_c_reference.py  build.sh  curl_optimization_example.sh  hifiberry-archive-keyring.asc  hifiberry-archive-keyring.gpg  nginx-roomeq.conf  setup.py  signal_gen.py  simple_rms.py  spl_meter.py  start_server.py  test_cleanup.py  test_freq_response.json
debian/: changelog  control  copyright  fft-analyse.1  generate-signals.py  install  record-sweep.1  rms-level.1  room-measure.1  roomeq-optimizer.1  roomeq-server.1  roomeq.lintian-overrides  roomeq.postinst  roomeq.postrm  roomeq.service  rules
doc/: api.md  optimizer.md  settings.md
docs/: optimizer.md
sample/: create_frequency_response.py
src/: roomeq_server.py
src/c/: Makefile  README.md  analyze.c  record-sweep  room-measure
src/roomeq/: __init__.py  analysis.py  biquad.py  eq_optimizer.py  eq_presets.py  fft.py  fft_rust.py  fft_utils.py  microphone.py  presets.py  recording.py  roomeq_server.py  rust_optimizer.py  signal_generator.py
src/rust/: Cargo.toml  README.md  demo_rust_optimizer.py  example_job.json  example_job_hp.json  test_unweighted.json
src/rust/src/: analyze_fft.rs  analyzer_main.rs  filters.rs  main.rs  optimizer.rs
