[package]
name = "roomeq-optimizer"
version = "0.6.0"
edition = "2021"
authors = ["HiFiBerry <support@hifiberry.com>"]
description = "Rust implementation of the RoomEQ optimizer for high-performance audio processing"
license = "MIT"

[[bin]]
name = "roomeq-optimizer"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.34"
argmin = "0.10"
argmin-math = "0.4"
num-complex = "0.4"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
